--- a/main.css
+++ b/main.css
@@ -29,9 +29,9 @@ img{
 }
 .wrapper{
     width: 1000px;
-
+    align-content: center;
     /*
-        TODO: 
+        TODO:
         - Center up the page
         - Create a flexbox containerer for
         the major page sections
@@ -42,18 +42,21 @@ img{
         TODO
         - Flexbox property here
     */
+
 }
 #site-header div{
     text-align: center;
     padding: 60px 0 120px 0;
     font-size: 4em;
 
+
     /*
-        TODO: 
+        TODO: DONE - does not work yet
         - Add a background image "header-img.jpg"
         make sure that the path to the image is correct
+        cep note --> This image is note showing. Why? path is correct.
     */
-
+    background-image: url("header-img.jpg");
     background-size: cover;
     background-position: right bottom;
 }
@@ -70,18 +73,21 @@ img{
     color: white;
     bottom: 20px;
     text-shadow: 0 5px 8px rgba( 0, 0, 0, 0.3 );
+
     /*
-        TODO: 
+        TODO: DONE
         - Use the script font: 'Dancing Script' fot this text
+        cep note --> added font-family.
     */
+    font-family: 'Dancing Script';
 }
 #main-navigation{
     background: #444;
-
     /*
-        TODO: 
+        TODO: DONE! WORKS!
         - Use Flexbox to arrange the navigation links
     */
+    display: flex;
 }
 #main-navigation a{
     display: block;
@@ -91,7 +97,7 @@ img{
     padding: 10px 20px;
 
     /*
-        TODO: 
+        TODO:
         - Flexbox - Create general spacing between nav links
     */
 }
@@ -99,7 +105,7 @@ img{
     margin-right: 400px;
 
     /*
-        TODO: 
+        TODO:
         - Flexbox - The logo needs to take up more space
         that the other links
     */
@@ -109,7 +115,7 @@ main{
     background-color: #444;
     box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3 );
     /*
-        TODO: 
+        TODO:
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
@@ -119,7 +125,7 @@ aside{
     background-color: #eee;
     box-shadow: 5px 5px 8px rgba( 0, 0, 0, 0.3 );
     /*
-        TODO: 
+        TODO:
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
@@ -159,36 +165,23 @@ article time{
 }
 article img{
     /*
-        TODO: 
+        TODO:
         - Float article images to the right
         and match sizes and spacing to the mockup
     */
 }
 article footer p{
     /*
-        TODO: 
+        TODO:
         - Style the article footer
         HINT: Look to the article header;
     */
 }
 #site-footer{
-    
+
     background: #333;
     /*
-        TODO: 
+        TODO:
         - Style the site footer
     */
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
