--- a/main.css
+++ b/main.css
@@ -51,12 +51,12 @@ img{
 
 
     /*
-        TODO: DONE - does not work yet
+        TODO: DONE - Works!
         - Add a background image "header-img.jpg"
         make sure that the path to the image is correct
-        cep note --> This image is note showing. Why? path is correct.
+        
     */
-    background-image: url("header-img.jpg");
+    background-image: url(./img/header-img.jpg);
     background-size: cover;
     background-position: right bottom;
 }
