--- a/main.css
+++ b/main.css
@@ -1,240 +1,194 @@
 /*
+
 FONTS:
+
 'Josefin Sans'
 'Noto Serif'
 'Dancing Script'
+
 COLORS:
+
 light tan: #eeebda
+
 */
-
-body {
-  font-family: 'Noto Serif', serif;
-  line-height: 1.8;
-  margin: 0;
-  background-color: #eeebda;
+body{
+    font-family: 'Noto Serif', serif;
+    line-height: 1.8;
+    margin: 0;
+    background-color: #eeebda;
 }
-
-h1, h2, h3 {
-  font-family: "Josefin Sans", sans-serif;
-  margin-top: 0;
+h1, h2, h3{
+    font-family: "Josefin Sans", sans-serif;
+    margin-top: 0;
 }
-
-img {
-  max-width: 100%;
-  padding: 0;
-  margin: 0;
-  display: block;
+img{
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+    display: block;
 }
+.wrapper{
+    width: 1000px;
 
-.wrapper {
-  width: 1000px;
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-  flex-wrap: wrap;
-  /*
-        TODO: Done
+    /*
+        TODO: 
         - Center up the page
         - Create a flexbox containerer for
         the major page sections
     */
 }
-
-#site-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  /*
+#site-header{
+    /*
         TODO
         - Flexbox property here
-        note: I added all of these lines
-
-        7/10 looks done
     */
 }
+#site-header div{
+    text-align: center;
+    padding: 60px 0 120px 0;
+    font-size: 4em;
 
-#site-header div {
-  text-align: center;
-  padding: 60px 0 120px 0;
-  font-size: 4em;
-  background-image: url("img/header-img.jpg");
-  /*
-        TODO: DONE
+    /*
+        TODO: 
         - Add a background image "header-img.jpg"
         make sure that the path to the image is correct
     */
-  background-size: cover;
-  background-position: right bottom;
-}
 
-#site-header div h1, #site-header div h3 {
-  margin: 0;
-  line-height: 1;
-  position: relative;
+    background-size: cover;
+    background-position: right bottom;
 }
-
-#site-header div h1 {
-  top: 20px;
+#site-header div h1,
+#site-header div h3{
+    margin: 0;
+    line-height: 1;
+    position: relative;
 }
-
-#site-header div h3 {
-  color: white;
-  bottom: 20px;
-  text-shadow: 0 5px 8px rgba( 0, 0, 0, 0.3);
-  font-family: Dancing Script;
-  /*
-        TODO: DONE
+#site-header div h1{
+    top: 20px;
+}
+#site-header div h3{
+    color: white;
+    bottom: 20px;
+    text-shadow: 0 5px 8px rgba( 0, 0, 0, 0.3 );
+    /*
+        TODO: 
         - Use the script font: 'Dancing Script' fot this text
     */
 }
+#main-navigation{
+    background: #444;
 
-#main-navigation {
-  background: #444;
-  display: flex;
-  /*
-        TODO:
+    /*
+        TODO: 
         - Use Flexbox to arrange the navigation links
-
-      added line 83 - "display: flex;"
-      note: I think this part is done
-      try adding
-      flex-direction: row;
-
     */
 }
+#main-navigation a{
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px 20px;
 
-#main-navigation a {
-  display: block;
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 10px 20px;
-  justify-content: flex-end;
-  /*
-        TODO: DONE July- I think this is done
+    /*
+        TODO: 
         - Flexbox - Create general spacing between nav links
-          */
-}
-
-#main-navigation #logo {
-  margin-right: 500px;
-  margin-left: 20px;
-  /*
-              TODO:  DONE
-              - Flexbox - The logo needs to take up more space
-              that the other links
-          */
-}
-
-main {
-  padding: 20px;
-  background-color: #444;
-  box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3);
-  display: flex;
-  flex-direction: column;
-  flex-basis: 55%;
-  margin-top: -50px;
-  /*
-
-        TODO: DONE!!!
-
-        - Flexbox: Set the starting width of this element
-        - Use relative positioning to bump this upward
-      */
-}
-
-aside {
-  padding: 20px;
-  background-color: #eee;
-  box-shadow: 5px 5px 8px rgba( 0, 0, 0, 0.3);
-  flex-basis: 20%;
-  position: relative;
-  margin-top: -50px;
-  /*
-        TODO: Done
-        - Flexbox: Set the starting width of this element
-        - Use relative positioning to bump this upward
-
-        I added flex basis 20% position relative margin-top -50px
-try top: -50px; instead of margin-top height
     */
 }
+#main-navigation #logo{
+    margin-right: 400px;
 
-aside h3 {
-  text-align: center;
-  margin: 0 0 10px 0;
-  padding: 0 0 10px 0;
-  border-bottom: 1px solid #ccc;
+    /*
+        TODO: 
+        - Flexbox - The logo needs to take up more space
+        that the other links
+    */
 }
-
-aside img {
-  border-radius: 50%;
-  margin-bottom: 30px;
-  border: 2px solid white;
-  float: right;
+main{
+    padding: 20px;
+    background-color: #444;
+    box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3 );
+    /*
+        TODO: 
+        - Flexbox: Set the starting width of this element
+        - Use relative positioning to bump this upward
+    */
 }
-
-article {
-  background-color: white;
-  box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3);
-  padding: 20px;
-  margin-bottom: 20px;
+aside{
+    padding: 20px;
+    background-color: #eee;
+    box-shadow: 5px 5px 8px rgba( 0, 0, 0, 0.3 );
+    /*
+        TODO: 
+        - Flexbox: Set the starting width of this element
+        - Use relative positioning to bump this upward
+    */
 }
-
-article h2 {
-  line-height: 1em;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 0 10px 0;
-  padding: 0 0 10px 0;
-  border-bottom: 1px solid #ccc;
-  text-transform: uppercase;
+aside h3{
+    text-align: center;
+    margin: 0 0 10px 0;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid #ccc;
 }
-
-article time {
-  font-size: 0.8em;
-  text-align: center;
-  display: block;
-  margin-bottom: 30px;
-  color: #666;
+aside img{
+    border-radius: 50%;
+    margin-bottom: 30px;
+    border: 2px solid white;
 }
-
-article img {
-  float: right;
-  width: 55%;
-  /*
-        TODO: done
+article{
+    background-color: white;
+    box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3 );
+    padding: 20px;
+    margin-bottom: 20px;
+}
+article h2{
+    line-height: 1em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 0 10px 0;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid #ccc;
+    text-transform: uppercase;
+}
+article time{
+    font-size: 0.8em;
+    text-align: center;
+    display: block;
+    margin-bottom: 30px;
+    color: #666;
+}
+article img{
+    /*
+        TODO: 
         - Float article images to the right
         and match sizes and spacing to the mockup
-
     */
 }
-
-article footer p {
-  text-align: center;
-  text-transform: uppercase;
-  padding: 10px;
-  line-height: 1em;
-  border-top: 1px solid #ccc;
-  /*
-        TODO:Done
+article footer p{
+    /*
+        TODO: 
         - Style the article footer
         HINT: Look to the article header;
-\
     */
 }
-
-#site-footer {
-  background: #333;
-
-  color: white;
-  text-align: center;
-  margin-top: 50px;
-  padding: 15px;
-  /*
-        TODO: DONE
+#site-footer{
+    
+    background: #333;
+    /*
+        TODO: 
         - Style the site footer
-
-        only code given was background: #333
     */
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
