--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 /*
+The Iron Yard changed this project from ibeer to iPhysicist
+I will be updating the css for iphysicist in this project
+
 
 FONTS:
 
